force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Appointment_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Capacity__c</fullName>
    <label>Appointment Capacity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Executor</fullName>
            </value>
            <value>
                <fullName>Executrix</fullName>
            </value>
            <value>
                <fullName>Master's Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>