force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Date_Of_Death__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Death__c</fullName>
    <label>Date of Death</label>
    <type>Date</type>
</CustomField>