force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Deceased_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Deceased_ID_Number__c</fullName>
    <label>Deceased ID Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>