force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Estate_Number__c.field-meta.xml
<CustomField>
    <fullName>Estate_Number__c</fullName>
    <label>Estate Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>