force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Executor_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Executor_Full_Name__c</fullName>
    <label>Executor Full Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>