force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Executor_ID_Number__c.field-meta.xml
<CustomField>
    <fullName>Executor_ID_Number__c</fullName>
    <label>Executor ID Number</label>
    <length>13</length>
    <type>Text</type>
</CustomField>