force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Letters_Issued_Date__c.field-meta.xml
<CustomField>
    <fullName>Letters_Issued_Date__c</fullName>
    <label>Letters Issued Date</label>
    <type>Date</type>
</CustomField>