force-app/idp/examples/letters-of-executorship/objects/Estate_Case__c/fields/Masters_Office__c.field-meta.xml
<CustomField>
    <fullName>Masters_Office__c</fullName>
    <label>Master's Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cape Town</fullName>
            </value>
            <value>
                <fullName>Pretoria</fullName>
            </value>
            <value>
                <fullName>Johannesburg</fullName>
            </value>
            <value>
                <fullName>Durban</fullName>
            </value>
            <value>
                <fullName>Pietermaritzburg</fullName>
            </value>
            <value>
                <fullName>Bloemfontein</fullName>
            </value>
            <value>
                <fullName>Makhanda</fullName>
            </value>
            <value>
                <fullName>Kimberley</fullName>
            </value>
            <value>
                <fullName>Mthatha</fullName>
            </value>
            <value>
                <fullName>Polokwane</fullName>
            </value>
            <value>
                <fullName>Mmabatho</fullName>
            </value>
            <value>
                <fullName>Mbombela</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>